--- a/index.html
+++ b/index.html
@@ -410,20 +410,16 @@
 					<div class="watching-item"><!--Currently Watching-->
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
-							<!-- <a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a> -->
-							<a class="tile" href="https://kitsu.app/anime/fairy-tail-100-years-quest"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45159/poster_image/large-ba31c3b38842ea8765313ca889e2600d.jpeg" alt="Fairy Tail: 100 Years Quest"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/re-zero-kara-hajimeru-isekai-seikatsu-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47235/poster_image/large-33a5be2eb6f601cc5bd66918ab6b43a3.jpeg" alt="Re:ZERO 3"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/ShangriLa-Frontier-2nd-Season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48677/poster_image/large-a94b224e23285e463dcc2d96276dfb39.jpeg" alt="Shangri-La Frontier Season 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-v"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48216/poster_image/large-aefa90ab3f001b8942d79c459724faf6.jpeg" alt="DanMachi Goddess of the Harvest Arc"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/bleach-sennen-kessen-hen-soukokutan"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48015/poster_image/large-f4bad27416d719f3a6d54ce9a8c66ec0.jpeg" alt="BLEACH: Thousand-Year Blood War Part 3 - The Conflict"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/kimi-wa-houkago-insomnia"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45746/poster_image/large-45e04c601dd80245037ab7b8ec5a0c4a.jpeg" alt="Insomniacs After School"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/sakamoto-days"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48915/poster_image/large-37aa395d6e0fbd2e6cbce7f3f6c77347.jpeg" alt="SAKAMOTO DAYS"></img></a>
+							<!-- <a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a> -->							
 							<a class="tile" href="https://kitsu.app/anime/zenshu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48638/poster_image/large-cbbb0ee6241addd39129d43aa12739f2.jpeg" alt="Zenshuu "></img></a>
-							<a class="tile" href="https://kitsu.app/anime/Solo-Leveling-Season-2-Arise-from-the-Shadow"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48671/poster_image/large-6156a7475d03dbb788ab1a9ce6c7f962.jpeg" alt="Solo Leveling Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kusuriya-no-hitorigoto-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48649/poster_image/large-9a5d9890c991b34bb9d7c99fd0670582.jpeg" alt="The Apothecary Diaries Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/sakamoto-days"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48915/poster_image/large-37aa395d6e0fbd2e6cbce7f3f6c77347.jpeg" alt="SAKAMOTO DAYS"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/Solo-Leveling-Season-2-Arise-from-the-Shadow"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48671/poster_image/large-6156a7475d03dbb788ab1a9ce6c7f962.jpeg" alt="Solo Leveling Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/watashi-no-shiawase-na-kekkon-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47969/poster_image/large-c847c028767f0559788ea5d08030b869.jpeg" alt="My Happy Marriage Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/re-zero-kara-hajimeru-isekai-seikatsu-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47235/poster_image/large-33a5be2eb6f601cc5bd66918ab6b43a3.jpeg" alt="Re:ZERO 3"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/dungeon-ni-deai-wo-motomeru-no-wa-machigatteiru-darou-ka-v"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48216/poster_image/large-aefa90ab3f001b8942d79c459724faf6.jpeg" alt="DanMachi Goddess of the Harvest Arc"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/ShangriLa-Frontier-2nd-Season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48677/poster_image/large-a94b224e23285e463dcc2d96276dfb39.jpeg" alt="Shangri-La Frontier Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/dr-stone-science-future"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48342/poster_image/large-402b1e3c7eb184c86cda7de478f5420d.jpeg" alt="Dr. STONE: SCIENCE FUTURE"></img></a>
-							
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -507,7 +503,9 @@
 							<a class="tile" href="https://kitsu.app/anime/salaryman-ga-isekai-ni-ittara-shitennou-ni-natta-hanashi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49065/poster_image/large-6951d9155e4f089760f12f02d8641341.jpeg" alt="Headhunted to Another World"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/honey-lemon-soda"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48587/poster_image/large-8f203935dc1c69fe4c81ab23beea8e42.jpeg" alt="Honey Lemon Soda"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/izure-saikyou-no-renkinjutsushi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48842/poster_image/large-20ca00f76571774a30f3f19393010759.jpeg" alt="Possibly the Greatest Alchemist of All Time"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/fate-strange-fake-tv"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47682/poster_image/large-98f3384eea30d9716c111052a423150d.jpeg" alt="Fate/strange Fake"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/sentai-red-isekai-de-boukensha-ni-naru"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49121/poster_image/large-2a6a27d8d392e25003c26c50540c3ce7.jpeg" alt="THE RED RANGER Becomes an Adventurer in Another World"></img></a> 
+							<a class="tile" href="https://kitsu.app/anime/ameku-takao-no-suiri-karte"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48691/poster_image/large-6301af57b48829421b482ab3804a4aa6.jpeg" alt="Ameku M.D.: Doctor Detective"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/kuroiwa-medaka-ni-watashi-no-kawaii-ga-tsuujinai"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48857/poster_image/large-21c374fb5ddfcf9eb5bdecfc65fc6942.jpeg" alt="Medaka Kuroiwa Is Impervious to My Charms"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 					<div class="watching-item"><!--Most Anticipated-->
@@ -1266,15 +1264,15 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://www.tiktok.com/@taylor.anime.reviews">
+					<a class="lf-link" href="https://www.tiktok.com/@amberoveranalyzes">
 						<div class="lf-item-container">
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-weeb_god_of_anime.jpeg"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/amberoveranalyzes.jpg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Taylor.Anime.Reviews</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @taylor.anime.reviews</span>
+								<span class="lf-displayname">amberoveranalyzes</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @amberoveranalyzes</span>
 							</div>
 						</div>
-					</a>
+					</a>					
 					<a class="lf-link" href="https://www.youtube.com/@Aaox">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-Aaox.jpg"></img>
@@ -1285,6 +1283,15 @@
 						</div>
 					</a>					
 					<button onclick="more_anitube_btn()" id="more_anitube_btn" class="more-lf-link-btn">Show more</button>
+					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@taylor.anime.reviews">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-weeb_god_of_anime.jpeg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Taylor.Anime.Reviews</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @taylor.anime.reviews</span>
+							</div>
+						</div>
+					</a>					
 					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@UnderTheScopeAnime/featured">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-UnderTheScopeReviews.jpg"></img>
@@ -1366,15 +1373,6 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@amberoveranalyzes">
-						<div class="lf-item-container">
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/amberoveranalyzes.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">amberoveranalyzes</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @amberoveranalyzes</span>
-							</div>
-						</div>
-					</a>					
 					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@ScamboliReviews">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-ScamboliReviews.jpg"></img>
