--- a/index.html
+++ b/index.html
@@ -1244,15 +1244,6 @@
 							</div>
 						</div>
 					</a>			
-					<a class="lf-link" href="https://www.youtube.com/@TheCartoonCipher">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-TheCartoonCipher.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">The Cartoon Cipher</span>
-								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @TheCartoonCipher</span>
-							</div>
-						</div>
-					</a>
 					<a class="lf-link" href="https://www.youtube.com/@GlassReflection">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-GlassReflection.jpg"></img>
@@ -1262,15 +1253,6 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://www.tiktok.com/@amberoveranalyzes">
-						<div class="lf-item-container">
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/amberoveranalyzes.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">amberoveranalyzes</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @amberoveranalyzes</span>
-							</div>
-						</div>
-					</a>					
 					<a class="lf-link" href="https://www.youtube.com/@Aaox">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-Aaox.jpg"></img>
@@ -1279,8 +1261,35 @@
 								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @Aaox</span>
 							</div>
 						</div>
+					</a>
+					<a class="lf-link" href="https://www.youtube.com/@otakusanonymous/videos">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/otakusanonymous.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Otakus Anonymous</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @otakusanonymous</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link" href="https://www.youtube.com/@TheChakraNetwork">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/TheChakraNetwork.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">The Chakra Network</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @TheChakraNetwork</span>
+							</div>
+						</div>
 					</a>					
 					<button onclick="more_anitube_btn()" id="more_anitube_btn" class="more-lf-link-btn">Show more</button>
+					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@amberoveranalyzes">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/amberoveranalyzes.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">amberoveranalyzes</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @amberoveranalyzes</span>
+							</div>
+						</div>
+					</a>					
 					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@taylor.anime.reviews">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-weeb_god_of_anime.jpeg"></img>
@@ -1290,15 +1299,6 @@
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@UnderTheScopeAnime/featured">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-UnderTheScopeReviews.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">Under The Scope</span>
-								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @UnderTheScopeReviews</span>
-							</div>
-						</div>
-					</a>
 					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@TotallyNotMark">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-TotallyNotMark.jpg"></img>
@@ -1416,16 +1416,63 @@
 							</div>
 						</div>
 					</a>
+
+					<!-- Archived Animedia =============================-->
 					<!--
-						<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@IslaMcTear">
-							<div class="lf-item-container">								
-								<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-IslaMcTear.jpg"></img>
-								<div class="lf-text">
-									<span class="lf-displayname">Isla McTear</span>
-									<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @IslaMcTear</span>
-								</div>
+					<a class="lf-link lf-anitube-archived" href="https://www.youtube.com/@TheCartoonCipher">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-TheCartoonCipher.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">The Cartoon Cipher</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @TheCartoonCipher</span>
 							</div>
-						</a>
+						</div>
+					</a>
+					<a class="lf-link lf-anitube-archived" href="https://www.youtube.com/@TheCanipaEffect">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/TheCanipaEffect.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">The Canipa Effect</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @TheCanipaEffect</span>
+							</div>
+						</div>
+					</a>					
+					<a class="lf-link lf-anitube-archived" href="https://www.youtube.com/@UnderTheScopeAnime/featured">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-UnderTheScopeReviews.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Under The Scope</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @UnderTheScopeReviews</span>
+							</div>
+						</div>
+					</a>					
+					<a class="lf-link lf-anitube-archived" href="https://www.youtube.com/@IslaMcTear">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-IslaMcTear.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Isla McTear</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @IslaMcTear</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link lf-anitube-archived" href="https://www.youtube.com/@DouchebagChocolat">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/DouchebagChocolat.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">DouchebagChocolat</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @DouchebagChocolat</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link lf-anitube-archived" href="https://www.youtube.com/@KevinNyaa/videos">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/KevinNyaa.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Kevin Nyaa</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @KevinNyaa</span>
+							</div>
+						</div>
+					</a>
 					-->
 				</div>
 
@@ -1525,6 +1572,7 @@
 					</a>
 				</div>
 				-->
+
 				<div class="lf-list">
 					<h3 class="lf-heading">Artists & Fanart</h3>							
 					<a class="lf-link" href="https://bsky.app/profile/hxxg.bsky.social">
