--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<head>
 		<title>MyAnimeProfile</title>
 		<meta name="description" content="A fun custom space to share a bit about myself and my enthusiasm for anime!">
-		<meta name="keywords" content="heykperks, anime, anime profile, my anime profile, myanimeprofile, favorite anime, anime favorites, anime recomenddations, anime resources, personal website, css-grid, web-design, responsive-design, html-css-javascript, anime-search, anime-fans, front-end-development, anime-website, anime-list, anime-sources, ui-ux-design">
-		<meta name="author" content="Kyle @heyKPerks">		
+		<meta name="keywords" content="Mechylex, anime, anime profile, my anime profile, myanimeprofile, favorite anime, anime favorites, anime recomenddations, anime resources, personal website, css-grid, web-design, responsive-design, html-css-javascript, anime-search, anime-fans, front-end-development, anime-website, anime-list, anime-sources, ui-ux-design">
+		<meta name="author" content="Mechylex">		
 		<link rel="icon" type="image/x-icon" href="favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,13 +35,13 @@
 			
 			<div id="bio">
 				<img id="profile_pic" src="assets/images/profilepic_square.png"></img>
-				<h2 id="name">Kyle</h2>
-				<h3 id="handle">@heyKPerks</h3>
+				<h2 id="name">Mechylex</h2>
+				<h3 id="handle">@Mechylex</h3>
 				<p id="biotext">I crave visually pleasing art and enjoyable characters, but overall an immersive story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
 				<div id="bio_socials">
-					<a href="https://kitsu.app/users/heyKPerks" id="bio-social-kitsu"class="bio-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
-					<!--<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fa-brands fa-twitter"></i></a>-->
-					<a href="https://bsky.app/profile/heykperks.moe" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a>
+					<a href="https://kitsu.app/users/Mechylex" id="bio-social-kitsu"class="bio-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
+					<!--<a href="https://twitter.com/Mechylex" id="bio-social-twitter"class="bio-social-item"><i class="fa-brands fa-twitter"></i></a>-->
+					<a href="https://bsky.app/profile/mechylex.bsky.social" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a>
 					<button onclick="show_discord_modal()" id="social_discord_btn" class="bio-social-item"><i class="fa-brands fa-discord"></i></button>
 					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="bio_social-github"class="bio-social-item"><i class="fa-brands fa-github"></i></a>
 				</div>
@@ -1869,13 +1869,13 @@
 				<h2 class="footer-header">Hey! 👋</h2>
 				<p class="footer-text">Thanks for stopping by. Feel free to connect and chat or judge my trash taste and spaghetti code.</p>
 				<div id="footer_socials">
-					<a href="https://kitsu.app/users/heyKPerks" id="footer_social-kitsu"class="footer-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
-					<a href="https://bsky.app/profile/heykperks.moe" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a> 
-					<!--<a href="https://twitter.com/heyKPerks" id="footer_social-twitter"class="footer-social-item"><i class="fa-brands fa-twitter"></i></a>-->
+					<a href="https://kitsu.app/users/mechylex" id="footer_social-kitsu"class="footer-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
+					<a href="https://bsky.app/profile/mechylex.bsky.social" id="bio-social-bsky"class="bio-social-item"><i class="fa-brands fa-bluesky"></i></a> 
+					<!--<a href="https://twitter.com/mechylex" id="footer_social-twitter"class="footer-social-item"><i class="fa-brands fa-twitter"></i></a>-->
 					<button onclick="show_discord_modal()" id="footer_social_discord_btn" class="bio-social-item"><i class="fa-brands fa-discord"></i></button>
 					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="footer_social-github"class="footer-social-item"><i class="fa-brands fa-github"></i></a>
 				</div>
-				<p class="copyright">&copy; 2025 heyKPerks.moe, All rights reserved</p>
+				<p class="copyright">&copy; 2025 MyAnimeProfile.com, All rights reserved</p>
 			</div>
 			<!-- footer -->
 		</div><!--pagewrapper-->
@@ -1887,14 +1887,14 @@
 				<h2 class="modal-heading"><i class="fa-brands fa-discord"></i> Discord</h2>
 				<div class="dicord-modal-item-grid">
 					<div class="discord-modal-item">				
-						<h3 class="dicord-modal-item-heading">DM's Are Open</h3>	
-						<img loading="Lazy" class="discord-modal-item-image" src="assets/images/profilepic_square.png" alt="heykperks logo"></img>
-						<span class="discord-modal-item-text">heyKPerks<span id="discord_num">#4655</span></span>
+						<h3 class="dicord-modal-item-heading">DM's Are Open</h3>
+						<img loading="Lazy" class="discord-modal-item-image" src="assets/images/profilepic_square.png" alt="Mechylex logo"></img>
+						<span class="discord-modal-item-text">Mechylex</span>
 						<button onclick="copy_discord_name()" class="discord-modal-btn">Copy</button>
 					</div>				
 					<div class="discord-modal-item">													
 						<h3 class="dicord-modal-item-heading">Join My Server</h3>		
-						<img loading="Lazy" class="discord-modal-item-image" src="assets/images/perksplace.png" alt="heykperks logo"></img>
+						<img loading="Lazy" class="discord-modal-item-image" src="assets/images/perksplace.png" alt="discord server logo"></img>
 						<span class="discord-modal-item-text">PerksPlace</span>
 						<button onclick="window.location.href='https://discord.gg/gQ3SKfn';" class="discord-modal-btn">Join</button>
 					</div>
