Updated content and follows links

--- a/index.html
+++ b/index.html
@@ -973,6 +973,13 @@
 					</a>
 				</div>				
 				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://news.hidive.com/2025/3/25/hidive-reveals-spring-2025-simulcast-lineup-and-english-dubs">
+						<h3 class="lf-feature-title">HIDIVE Reveals Spring 2025 Lineup!</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> HIDIVE News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/HIDIVE_Spring_2025_Season.jpg"></img>
+					</a>
+				</div>						
+				<div class="lf-feature">
 					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/deep-dives/2025/2/5/breakdown-2024-english-dub-simulcasts-crunchyroll">
 						<h3 class="lf-feature-title">Crunchyroll English Dub Census 2024</h3>
 						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchyroll News</span>
@@ -1284,21 +1291,21 @@
 						</div>
 					</a>					
 					<button onclick="more_anitube_btn()" id="more_anitube_btn" class="more-lf-link-btn">Show more</button>
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@amberoveranalyzes">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@amberoveranalyzes">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/amberoveranalyzes.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">amberoveranalyzes</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @amberoveranalyzes</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @amberoveranalyzes</span>
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@taylor.anime.reviews">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@weebgodofanime">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-weeb_god_of_anime.jpeg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Taylor.Anime.Reviews</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @taylor.anime.reviews</span>
+								<span class="lf-displayname">Taylor Anime Reviews</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @weebgodofanime</span>
 							</div>
 						</div>
 					</a>					
@@ -1329,48 +1336,48 @@
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@eulanthias">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@OtakuNewsForYou">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/eulanthias.jpeg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">Otaku News For You</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @eulanthias</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @OtakuNewsForYou</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@ohhtako">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/channel/UCKwIRoKHCemQqeGonhNIp6w">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/tacotheweeb.jpeg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">ohhtako</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @ohhtako</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @ohhtako</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@swaynami">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@SWAYNAMI">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/swaynami.jpeg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">SWAYNAMI</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @swaynami</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @SWAYNAMI</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@kazadasama">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@Kazada">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/Kazadasama.jpeg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Kazadasama</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @kazadasama</span>
+								<span class="lf-displayname">Kazada</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @Kazada</span>
 							</div>
 						</div>
 					</a>					
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@rachelszero?_t=8dvzUWWNVYg&_r=1">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@rachelszero">
 						<div class="lf-item-container">
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-rachelszero.jpeg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Rachel</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @rachelszero</span>
+								<span class="lf-displayname">RachelsZero</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @rachelszero</span>
 							</div>
 						</div>
 					</a>
